--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
